Add sha3-256 hash method
Signed-off-by: Gao Binlong <gbinlong@amazon.com>